{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 77,
  "lineage": "b9aaf6f8-76b7-330e-11c2-67dfc7d09786",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c52980a6e250654",
            "arn": "arn:aws:ec2:us-east-1:683044484462:elastic-ip/eipalloc-07c52980a6e250654",
            "association_id": "eipassoc-0da8508efa1f70fce",
            "domain": "vpc",
            "id": "eipalloc-07c52980a6e250654",
            "instance": "i-030ed9f41cd5f9a7f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00dbff7e429be3717",
            "private_dns": "ip-10-0-1-230.ec2.internal",
            "private_ip": "10.0.1.230",
            "public_dns": "ec2-35-169-155-224.compute-1.amazonaws.com",
            "public_ip": "35.169.155.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "instamastadongram-eip"
            },
            "tags_all": {
              "Name": "instamastadongram-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance",
            "aws_iam_role.ec2_instance",
            "aws_instance.app",
            "aws_key_pair.app",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ad253013fad0a42a",
            "arn": "arn:aws:ec2:us-east-1:683044484462:instance/i-030ed9f41cd5f9a7f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instamastadongram-ec2-instance-profile",
            "id": "i-030ed9f41cd5f9a7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "instamastadongram-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00dbff7e429be3717",
            "private_dns": "ip-10-0-1-230.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.230",
            "public_dns": "ec2-35-169-155-224.compute-1.amazonaws.com",
            "public_ip": "35.169.155.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:683044484462:key/f8cc15a1-3a12-4efd-975e-4005ae6a00ed",
                "throughput": 125,
                "volume_id": "vol-0a082e0e3bef2ccb2",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067f790959b6795b9",
            "tags": {
              "Name": "instamastadongram-app"
            },
            "tags_all": {
              "Name": "instamastadongram-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0390b4d36e8f9ed13"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance",
            "aws_iam_role.ec2_instance",
            "aws_key_pair.app",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683044484462:internet-gateway/igw-0a5599ef07237f99f",
            "id": "igw-0a5599ef07237f99f",
            "owner_id": "683044484462",
            "tags": {
              "Name": "instamastadongram-igw"
            },
            "tags_all": {
              "Name": "instamastadongram-igw"
            },
            "vpc_id": "vpc-03d8460b9cbc5fed4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683044484462:route-table/rtb-0af915db6e060a7a1",
            "id": "rtb-0af915db6e060a7a1",
            "owner_id": "683044484462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a5599ef07237f99f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "instamastadongram-public-rt"
            },
            "tags_all": {
              "Name": "instamastadongram-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d8460b9cbc5fed4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd285eed56abef34",
            "route_table_id": "rtb-0af915db6e060a7a1",
            "subnet_id": "subnet-067f790959b6795b9"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683044484462:security-group/sg-0390b4d36e8f9ed13",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0390b4d36e8f9ed13",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "instamastadongram-app-20250803024350958900000001",
            "name_prefix": "instamastadongram-app-",
            "owner_id": "683044484462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instamastadongram-app-sg"
            },
            "tags_all": {
              "Name": "instamastadongram-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d8460b9cbc5fed4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683044484462:subnet/subnet-067f790959b6795b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067f790959b6795b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "683044484462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "instamastadongram-public-subnet"
            },
            "tags_all": {
              "Name": "instamastadongram-public-subnet"
            },
            "vpc_id": "vpc-03d8460b9cbc5fed4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:683044484462:vpc/vpc-03d8460b9cbc5fed4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04236b73cb6dd650c",
            "default_route_table_id": "rtb-01c3c38f6f80e33b5",
            "default_security_group_id": "sg-0e3e99f4d9594188a",
            "dhcp_options_id": "dopt-07d880f3ee063ece5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d8460b9cbc5fed4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c3c38f6f80e33b5",
            "owner_id": "683044484462",
            "tags": {
              "Name": "instamastadongram-vpc"
            },
            "tags_all": {
              "Name": "instamastadongram-vpc"
            }
          }
        }
      ]
    }
  ]
}